--- a/css/common.css
+++ b/css/common.css
@@ -35,7 +35,7 @@ body {
 	background-color: #fff;
 	line-height: 130%;
 	font-size: 20px;
-	 padding: 50px 0 0 0;
+	 padding: 50px 0 50px 0;
 }
 
 
@@ -100,7 +100,7 @@ box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
 
 }
 
-#header-contents input[type="checkbox"] {
+#header-contents #checkbox-menu input[type="checkbox"] {
 	visibility: hidden;
 }
 #header-contents #checkbox-menu {
@@ -517,75 +517,6 @@ font-family: 'Montserrat', sans-serif;
 margin: 15px 5px 10px;
 }
 
-.rist-menu {
-	list-style: none;
-	overflow: hidden;
-	width: 100%;
-	padding: 0;
-	margin: 0px auto 20px;
-	-webkit-box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
--moz-box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
-box-shadow: 1px 1px 10px 0 rgba(0, 0, 0, 0.2);
-
-}
-
-.rist-menu li {
-	list-style: none;
-	overflow: hidden;
-	width: 100%;
-	margin: 0;
-	padding: 0;
-
-}
-
-.rist-menu li:last-child {
-	border-bottom: 0px;
-}
-
-.rist-menu li a {
-	display: block;
-	position: relative;
-	z-index: 10;
-	height: 40px;
-	margin: 0;
-	padding: 0 10px 0 50px;
-	background: #fff;
-	color: #222;
-	font-size: 15px;
-	line-height: 40px;
-	font-weight: bold;
-	text-decoration: none;
-}
-
-.rist-menu li a:hover {
-	background: #ddd;
-}
-
-.rist-menu li a:before {
-	display: block;
-	content: "";
-	position: absolute;
-	top: 50%;
-	left: 25px;
-	width: 8px;
-	height: 8px;
-	margin-top: -4px;
-	border-radius: 50%;
-	background: #428abd;
-	transition: .2s ;
-}
-
-li a:hover:before {
-	left: -16px;
-	width: 50px;
-	height: 50px;
-	margin-top: -25px;
-}
-
-.wpp-list {
-	margin-bottom: 20px;
-}
-
 
 
 
@@ -661,35 +592,92 @@ li a:hover:before {
 
 /* カテゴリーボタン */
 
-.title .mans {
+#article-top .mans {
 	background: #428abd;
 }
 
-.title .boys {
+#header_rapper .mans {
+	border-bottom: 3px solid #428abd;
+}
+
+.mans .page-title {
+		background: #428abd;
+}
+
+#article-top .boys {
 	background: #ffbe00;
 }
 
-.title .ladys {
+#header_rapper .boys {
+	border-bottom: 3px solid #ffbe00;
+}
+.boys .page-title {
+		background: #ffbe00;
+}
+
+#article-top .ladys {
 	background: #f05187;
 }
 
-.title .web {
+#header_rapper .ladys {
+	border-bottom: 3px solid #f05187;
+}
+
+.ladys .page-title {
+		background: #f05187;
+}
+
+#article-top .web {
 	background: #7aa821;
 }
 
-.title .girls {
-	background: #f75410;
-
+#header_rapper .web {
+	border-bottom: 3px solid #7aa821;
 }
 
-.title .moe {
+.web .page-title {
+		background: #7aa821;
+}
+
+#article-top .girls {
+	background: #f75410;
+}
+
+#header_rapper .girls {
+	border-bottom: 3px solid #f75410;
+}
+
+.girls .page-title {
+		background: #f75410;
+}
+
+#article-top .moe {
 	background: #ff9c8c;
 }
 
-.title .manager-room {
+#header_rapper .moe {
+	border-bottom: 3px solid #ff9c8c;
+}
+
+.moe .page-title {
+		background: #ff9c8c;
+}
+
+#article-top .manager-room {
 	background: #2c4f54;
 }
 
+#header_rapper .manager-room {
+	border-bottom: 3px solid #2c4f54;
+}
+
+.manager-room .page-title {
+		background: #2c4f54;
+}
+
+.manager-room {
+	background: #2c4f54;
+}
 #balloon-3-top-right
  {
 	position: absolute;
