--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 @import url(./css/html5reset.css);
 @import url(./css/nav.css);
 @import url(./css/flocks.css);
-@import url(./css/sidebar.css);
+@import url(./css/sidemenu.css);
 @import url(./css/login.css);
 @import url(./css/favorite-list.css);
 @import url(./css/your-profile.css);
