--- a/style.css
+++ b/style.css
@@ -13,3 +13,4 @@
 @import url(./css/favorite-list.css);
 @import url(./css/your-profile.css);
 @import url(./css/flexslider.css);
+@import url(./css/front_article_archive.css);
